--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Carp-POE
-version:             0.03
+version:             0.04
 abstract:            Carp adapted to POE
 license:             perl
 author:              
@@ -9,6 +9,7 @@ generated_by:        ExtUtils::MakeMaker version 6.42
 distribution_type:   module
 requires:     
     Carp:                          0
+    Exporter:                      0
     POE::Session:                  0
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
