Import of HINRIK/Carp-POE-0.05 from CPAN.
gitpan-cpan-distribution: Carp-POE
gitpan-cpan-version:      0.05
gitpan-cpan-path:         HINRIK/Carp-POE-0.05.tar.gz
gitpan-cpan-author:       HINRIK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Carp-POE
-version:             0.04
+version:             0.05
 abstract:            Carp adapted to POE
 license:             perl
 author:              
@@ -10,7 +10,9 @@ distribution_type:   module
 requires:     
     Carp:                          0
     Exporter:                      0
-    POE::Session:                  0
+    POE:                           0
+    Test::More:                    0
+    Test::Warn:                    0
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
     version: 1.3
