--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Carp-POE
-version:             0.05
+version:             0.06_01
 abstract:            Carp adapted to POE
 license:             perl
 author:              
@@ -12,7 +12,7 @@ requires:
     Exporter:                      0
     POE:                           0
     Test::More:                    0
-    Test::Warn:                    0
+    Test::Warn:                    0.11
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
     version: 1.3
