--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Carp-POE
-version:             0.06_01
+version:             0.07
 abstract:            Carp adapted to POE
 license:             perl
 author:              
