--- a/META.yml
+++ b/META.yml
@@ -1,18 +1,33 @@
---- #YAML:1.0
-name:                Carp-POE
-version:             0.07
-abstract:            Carp adapted to POE
-license:             perl
-author:              
-    - Hinrik Örn Sigurðsson <hinrik.sig@gmail.com>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Carp:                          0
-    Exporter:                      0
-    POE:                           0
-    Test::More:                    0
-    Test::Warn:                    0.11
+---
+abstract: 'Carp adapted to POE'
+author:
+  - 'Hinrik Örn Sigurðsson <hinrik.sig@gmail.com>'
+build_requires:
+  ExtUtils::MakeMaker: 6.42
+  Test::More: 0
+  Test::Warn: 0.20
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
+distribution_type: module
+generated_by: 'Module::Install version 0.91'
+license: perl
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Carp-POE
+no_index:
+  directory:
+    - inc
+    - t
+requires:
+  Carp: 0
+  Exporter: 0
+  POE: 0
+  perl: 5.6.0
+resources:
+  Ratings: http://cpanratings.perl.org/d/Hailo
+  bugtracker: http://github.com/hinrik/hailo/issues
+  homepage: http://search.cpan.org/dist/Hailo
+  license: http://dev.perl.org/licenses/
+  repository: git://github.com/hinrik/carp-poe.git
+version: 0.08
